# RSW2

./: Cargo.toml  README.md  output.txt
data/: aliases.json
src/: cli.rs  main.rs  state.rs  urls.rs  utils.rs
src/commands/: collection.rs  download.rs  help.rs  mod.rs  search.rs
