[package]
name = "RSW_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sccache = "0.3.3"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
rand = "0.8.5"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"